<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewState"
            type="nl.rijksoverheid.en.onboarding.ExplanationFragment.ViewState" />

        <variable
            name="nextButtonClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:transitionName="appbar"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transitionGroup="true"
            android:transitionName="content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fillViewport="true"
                android:overScrollMode="ifContentScrolls"
                app:layout_constraintBottom_toTopOf="@id/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/illustration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:importantForAccessibility="no"
                        app:hideOnSmallScreenHeight="@{true}"
                        app:imageResource="@{viewState.illustration}"
                        app:layout_constraintBottom_toTopOf="@id/heading_layout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:optional_animation="@{viewState.animation}"
                        tools:src="@drawable/illustration_explanation_step_1" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/heading_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:accessibilityHeading="true"
                        android:focusable="true"
                        app:layout_constraintBottom_toTopOf="@id/description"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/illustration"
                        tools:targetApi="p">

                        <TextView
                            android:id="@+id/example"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/onboarding_example"
                            android:textAppearance="?attr/textAppearanceSubtitle1"
                            android:textColor="@color/onboarding_example_header"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:show="@{viewState.example}" />

                        <TextView
                            android:id="@+id/headline"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@{viewState.headline}"
                            android:textAppearance="?attr/textAppearanceHeadline5"
                            app:layout_constraintTop_toBottomOf="@id/example"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_goneMarginTop="16dp"
                            tools:text="@string/onboarding_explanation_1_headline" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="16dp"
                        android:text="@{viewState.description}"
                        android:textAppearance="?attr/textAppearanceBody1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/heading_layout"
                        tools:text="@string/onboarding_explanation_1_description" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <View
                android:layout_width="0dp"
                android:layout_height="8dp"
                android:background="@drawable/gradient_fade_out"
                app:layout_constraintBottom_toTopOf="@id/next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:onClick="@{nextButtonClickListener}"
                android:text="@string/onboarding_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>